--- a/src/KnuckleBones/KnuckleBonesStyles.css
+++ b/src/KnuckleBones/KnuckleBonesStyles.css
@@ -20,8 +20,6 @@
     display: flex;
     flex-direction: column;
     font-size: 1.5rem;
-    border-bottom: solid black 1rem;
-    margin-bottom: 2rem;
 }
 
 .rules h1 {
@@ -32,8 +30,10 @@
 .rules ul h1 {
     font-size: 2rem;
     margin-bottom: 1rem;
-    padding-bottom: 1px;
-    border-bottom: solid black 5px;
+    padding: .7rem;
+    border: solid pink 1px;
+    border-radius: 2rem;
+    background-color: black;
     width: fit-content;
 }
 
@@ -44,4 +44,10 @@
 .rules li {
     margin-bottom: 1rem;
     padding-right: 1rem;
+}
+
+.lineBorder {
+    background: linear-gradient(to bottom, white, black);
+    height: 1rem;
+    margin-bottom: 2rem;
 }
